# Tib-word-gathering

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: CI.yml
data/output/classic_tib_word/: bu_ston.json  marpa-translated.json  marpa.json  mdzangs_blun-translated.json  mdzangs_blun.json  mila.json  taranatha.json
data/output/segpos_tib_word/: UT10736-001-0001.json  UT10736-001-0002.json  UT10736-001-0003.json  UT10736-001-0004.json  UT10736-001-0005.json  UT10736-001-0006.json  UT10736-001-0007.json  UT10736-001-0008.json  UT10736-001-0009.json  UT10736-001-0010.json  UT10736-001-0011.json  UT10736-001-0012.json  UT10736-001-0013.json  UT10736-002-0001.json  UT10736-003-0001.json  UT10736-003-0002.json  UT10736-003-0003.json  UT10736-003-0004.json  UT10736-003-0005.json  UT10736-004-0001.json  UT10736-004-0002.json  UT10736-004-0003.json  UT10736-004-0004.json  UT10736-004-0005.json  UT10736-004-0006.json  UT10736-006-0001.json  UT10736-006-0002.json  (+1377 more)
src/TibWordGathering/: classic_tib_word.py  combine_word_seg.py  conllu_parser.py  evaluate_tib_word.py  evaluation_tib_word.py  intersection_valid_data.py  manual_dataset.py  overfitting_seg.py  push_to_hub.ipynb  pushing_data_to_hugging_hub.py  segpos.py  segpos_dharma_tib_word.py  segpos_ekang_eteng_tib_word.py  segpos_kang_and_eteng.py  underfitting_seg.py  utils.py  word_seg_validation.py
tests/: test_conllu.py  test_evaluate.py  test_example.py  test_segpos.py  test_segpos_kang_and_eteng.py  test_segpos_kangyur_and_tengyur.py  test_tib_words_gathering.py  test_word_seg_validation.py
(+22 files in other folders)
